fix home overflow

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -10,5 +10,6 @@
 
   @include xl {
     height: calc(100vh - 130px) !important;
+    overflow: initial !important;
   }
 }
